# filigrane-docs

./: main.py  pyproject.toml
router/: filigrane.py
templates/: base.html  filigrane_form.html  index.html
templates/includes/: card.html  navbar.html
utils/: docs_utils.py
