[tool.poetry]
name = "filigrane-docs"
version = "0.1.0"
description = "a web application to manage pdf docs"
authors = ["yann97one <yannissileber@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
reportlab = "^4.4.1"
fastapi = {extras = ["standard"], version = "^0.115.12"}
pypdf3 = "^1.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
